[package]
name = "tempus_poller"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dotenvy = "0.15.7"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "time",
    "tls-rustls",
] }
tokio = { version = "1.50.0", features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
wiremock = "0.6.5"
